<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ingredient_recycler_view"
        android:visibility="gone">
    </android.support.v7.widget.RecyclerView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="200dp">
            </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_text_view"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin">
            </TextView>

            <RelativeLayout
                android:id="@+id/next_prev_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/prev_image_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/exo_controls_previous"
                    android:background="@color/colorAccent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/previous"/>

                <ImageView
                    android:id="@+id/next_image_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/exo_controls_next"
                    android:background="@color/colorAccent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/next"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>


